<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="vertical"
        android:padding="5dip">

        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:orientation="vertical">

            <EditText
                android:id="@+id/business_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_email" />


            <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repassword" />

        </LinearLayout>

    <LinearLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userprofile"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dip"
            android:text="@string/tellus"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/BusinsesName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_name" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip"
            android:inputType="number" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Spinner
                android:id="@+id/resturent_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/foodtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:minLines="3" />
    </LinearLayout>

        <Button
            android:id="@+id/createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="Create Account" />

    </LinearLayout>

</ScrollView>