<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activity.CreateDeal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:cardCornerRadius="3dp">

            <LinearLayout
                android:id="@+id/itemContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:background="@drawable/image_border_not_selected"
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    android:src="@drawable/menuitem" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/camera"
                    android:gravity="center_horizontal"
                    android:text="@string/imgtext" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            app:cardCornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:background="@drawable/image_border_not_selected"
                        android:id="@+id/priceimg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dip"
                        android:src="@drawable/dollor_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/priceimg"
                        android:layout_centerHorizontal="true"
                        android:padding="10dp"
                        android:text="@string/pricetext" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:background="@drawable/image_border_not_selected"
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dip"
                        android:src="@drawable/watch_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/timer"
                        android:layout_centerHorizontal="true"
                        android:padding="10dp"
                        android:text="@string/timetext" />


                </RelativeLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:background="@drawable/image_border_not_selected"
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Deal Title"
                    android:textStyle="bold" />

                <EditText

                    android:text=""
                    android:id="@+id/deal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Deal Title" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:background="@drawable/image_border_not_selected"
                android:id="@+id/descLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Deal Description"
                    android:textStyle="bold" />

                <EditText

                    android:id="@+id/dealDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="Enter deal description(500 characters max)"
                    android:minLines="3" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel" />

            <Button
                android:id="@+id/Review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Review" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>